--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'century gothic', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -75,12 +75,33 @@ body {
   overflow-y: auto;
 }
 
+#challengeHelp {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+#challengeName {
+  font-size: 24px;
+}
+
 #debugProps,
 #mousePositions {
   display: flex;
   flex-direction: column;
   max-width: 250px;
   min-width: 250px;
+}
+#mousePositionsContainer {
+  display: flex;
+  flex-direction: row;
+}
+#mouseIcon {
+  padding: 12px 10px 0 0;
+}
+#mouseIcon svg {
+  height: 20px;
+  color: #ccc;
+  cursor: inherit;
 }
 
 #controls span {
@@ -94,6 +115,40 @@ body {
   height: 100vh;
   overflow: hidden; /* keeps a scrollbar from appearing due to canvas resize */
   outline: none;
+  position: relative;
+}
+#canvasVeil {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  opacity: 0;
+  pointer-events: none;
+  color: #08f;
+  font-size: 90px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 400;
+}
+#nextChallenge {
+  float: right;
+  font-size: 36px;
+  width: fit-content;
+  border-bottom: 1px solid #08f;
+  pointer-events: visibleFill;
+  transition: 0.25s;
+}
+#nextChallenge:hover {
+  cursor: pointer;
+  color: #6bf;
+  transition: 0.25s;
+  border-bottom-color: #6bf;
+}
+#nextChallengeIcon svg {
+  height: 26px;
+  color: inherit;
+  transition: inherit;
 }
 
 #codeError {
@@ -187,7 +242,7 @@ body {
   height: 18px;
 }
 
-#infoModalVeil {
+.modalVeil {
   /* Box model allows the padding to be considered as part of the 100% and 100vh */
   box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -202,7 +257,7 @@ body {
   padding: 60px;
   opacity: 0;
 }
-#infoModal {
+.modal {
   /* Box model allows the padding to be considered as part of the 100% and 100vh */
   box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -214,7 +269,7 @@ body {
   border-radius: 10px;
   height: 100%;
 }
-#infoModalScroller {
+.modalScroller {
   padding: 0 20px;
   height: 100%;
   overflow-y: auto;
@@ -262,6 +317,12 @@ body {
   background-color: #ff8;
   padding: 10px 20px;
   width: fit-content;
+}
+
+#configModal {
+  width: 500px;
+  background-color: #333;
+  height: auto;
 }
 
 footer {
